# CommandCore

./: .gitignore  PHASE-2.md  PHASE-6.md  README.md  VISION.md
app/: .gitignore  (+3 more)
core/: Dockerfile  pyproject.toml
core/agents/: roles.yaml  schedules.yaml
core/commandcore/: __init__.py
core/jarvis_core/: __init__.py  __main__.py  app.py  approvals.py  config.py  events.py  ledger.py  missions.py  odysseus.py  planner.py  roles.py  scheduler.py  telegram.py  tiers.py
core/scripts/: demo_alpha3_kernel.py  e2e_demo.py  smoke_nim.py
core/tests/: conftest.py  test_agent_mission_assignment.py  test_agent_registry.py  test_agent_runtime.py  test_alpha3_demo_script.py  test_api.py  test_audit_trail.py  test_capability_registry.py  test_commandcore_api.py  test_commandcore_contracts.py  test_commandcore_core_contracts.py  test_company_registry.py  test_conversation_context.py  test_conversation_engine.py  test_conversation_knowledge_links.py  test_dashboard_agents.py  test_dashboard_conversations.py  test_dashboard_executive.py  test_dashboard_kernel.py  test_dashboard_missions.py  test_dashboard_serializers.py  test_dashboard_tools.py  test_dashboard_workspaces.py  test_demo_seed.py  test_event_bus.py  test_event_replay.py  test_event_store.py  test_executive_governance_smoke.py  test_executive_orchestrator.py  test_executive_policy_engine.py  test_executive_policy_gate.py  test_executive_reporting.py  test_executive_runtime.py  test_executive_state_store.py  test_fleet.py  test_kernel_bootstrap.py  test_kernel_health_snapshot.py  test_kernel_integration_smoke.py  (+12 more)
(+454 files in other folders)
