[project]
name = "jarvis-core"
version = "0.1.0"
description = "Jarvis Core — mission orchestration service (Hermes engine, event hub, approval broker)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "croniter>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
jarvis-core = "jarvis_core.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jarvis_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
